<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_review_dialog_rating"
            android:numStars="5"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/detail_review_dialog_writer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:hint="@string/detail_review_dialog_writer"/>

        <EditText
            android:id="@+id/detail_review_dialog_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:hint="@string/detail_review_dialog_content"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_detail_review_dialog_submit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/detail_review_dialog_submit" />
        </LinearLayout>
    </LinearLayout>

    </ScrollView>

</LinearLayout>
