<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="14sp"
        android:text="@string/prefer_delete_index"
        android:id="@+id/prefer_delete_index_btn"
        />

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/prefer_character_image"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="22sp"
        android:id="@+id/prefer_result_text_title"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/prefer_character_image"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/prefer_result_text_content"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/prefer_result_text_title"
        android:layout_marginTop="30dp"
        />

    <Button
        android:layout_width="128dp"
        android:layout_height="50dp"
        android:text="@string/restart_prefer_test"
        android:id="@+id/btn_prefer_reexamine"
        android:textSize="20sp"
        android:layout_alignTop="@+id/bt_recommend"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="50dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/check_prefer_sight"
        android:id="@+id/bt_recommend"
        android:textSize="20sp"
        android:layout_marginBottom="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"/>


</RelativeLayout>